--- a/etc/Updated hostapd.conf
+++ b/etc/Updated hostapd.conf
@@ -1,65 +1,33 @@
-# /etc/hostapd.conf
-# Written by Aaron Ybarra-Rojas
+# Created by Aaron Ybarra-Rojas 
 
-# Interface & Driver
+# /etc/hostapd.conf - WPA2-Enterprise (802.1X) with FreeRADIUS
 interface=wlan0
 driver=nl80211
 
-# Wifi Standard (a = 5GHz, g = 2.4 GHz)
+ssid=ERAU-HoneywellAP
+country_code=US
 hw_mode=g
 channel=6
 
-ieee80211n=1
-ieee80211ac=1
-ieee80211d=1
-country_code=US
-
-# SSID Settings
-ssid=ERAU-HoneywellAP
-
-# set following line to 1 to hide SSID
+wmm_enabled=1
+auth_algs=1
 ignore_broadcast_ssid=0
 
-# QoS and Performance
-wmm_enabled=1
-
-# -- Security Section --
-# WPA3-SAE (8) and WPA2-PSK (2)
+# WPA2-Enterprise
 wpa=2
 wpa_key_mgmt=WPA-EAP
 rsn_pairwise=CCMP
-
 ieee8021x=1
 
+# RADIUS (FreeRADIUS running on same box)
 auth_server_addr=127.0.0.1
 auth_server_port=1812
 auth_server_shared_secret=radiussecret
 
+# PMF (start optional for compatibility; we can make it required later)
 ieee80211w=1
 
-# Disallow Shared Key Auth (WEP leftovers)
-auth_algs=1
-
-# Disable buggy/weak WPS protocol entirely
-wps_state=0
-
-# Kick clients if their signal becomes too weak/distance to acknowledge packets reliably
-disassoc_low_ack=1
-
-# Enforce AES (CCMP) only. 
-rsn_pairwise=CCMP
-
-# Protected Management Frames (PMF)
-# This enables PMF. It encrypts management frames, making it nearly impossible for an attacker to "kick" you off your own network using a deauthentication attack.
-# 0 = disabled, 1 = optional, 2 = required
-ieee80211w=2
-
-# Anti-Brute Force (SAE Anti-clogging)
-sae_anti_clogging_threshold=5
-
-# Isolate clients (prevents devices on WiFi from attacking eachother)
-ap_isolate=1
-
-# Logging - keep detailed for debugging
-logger_syslog=-1
-logger_syslog_level=2
+# Keep it simple while debugging
+logger_stdout=1
+logger_stdout_level=2
+root@ls1088ardb-pb:~#
