--- a/etc/conf/hostapd.conf
+++ b/etc/conf/hostapd.conf
@@ -1,33 +1,86 @@
-# Created by Aaron Ybarra-Rojas 
-
-# /etc/hostapd.conf - WPA2-Enterprise (802.1X) with FreeRADIUS
+# /etc/hostapd.conf
+# Written by Aaron Ybarra-Rojas
+# Purpose: WPA2-Enterprise (802.1X) using FreeRADIUS on LS1088ARDB
+ 
+# =========================
+# Interface & Driver
+# =========================
 interface=wlan0
 driver=nl80211
-
-ssid=ERAU-HoneywellAP
-country_code=US
+ 
+# =========================
+# Wi-Fi Standard / Radio
+# =========================
+# (a = 5GHz, g = 2.4GHz)
 hw_mode=g
 channel=6
-
-wmm_enabled=1
-auth_algs=1
+ 
+# Regulatory domain (required for many drivers)
+country_code=US
+ieee80211d=1
+ 
+# Performance / capabilities (leave enabled if your driver supports them)
+ieee80211n=1
+#   ieee80210ac=1
+ 
+# =========================
+# SSID Settings
+# =========================
+ssid=ERAU-HoneywellAP
+ 
+# set following line to 1 to hide SSID
 ignore_broadcast_ssid=0
-
-# WPA2-Enterprise
+ 
+# =========================
+# QoS and Performance
+# =========================
+wmm_enabled=1
+ 
+# Disallow Shared Key Auth (WEP leftovers)
+auth_algs=1
+ 
+# =========================
+# Security Section (WPA2-Enterprise / 802.1X)
+# =========================
+# IMPORTANT:
+# - WPA2-Enterprise uses WPA-EAP (NOT WPA-PSK, NOT SAE)
+# - There is NO wpa_passphrase in Enterprise mode
+ 
 wpa=2
 wpa_key_mgmt=WPA-EAP
 rsn_pairwise=CCMP
+ 
+# Enable 802.1X (EAP) authentication
 ieee8021x=1
-
-# RADIUS (FreeRADIUS running on same box)
+ 
+# RADIUS Authentication Server (FreeRADIUS on same board)
 auth_server_addr=127.0.0.1
 auth_server_port=1812
 auth_server_shared_secret=radiussecret
-
-# PMF (start optional for compatibility; we can make it required later)
-ieee80211w=1
-
-# Keep it simple while debugging
-logger_stdout=1
+ 
+# Optional: RADIUS Accounting (recommended)
+acct_server_addr=127.0.0.1
+acct_server_port=1813
+acct_server_shared_secret=radiussecret
+ 
+# Protected Management Frames (PMF)
+# 0 = disabled, 1 = optional, 2 = required
+# Start with optional for compatibility while testing; after clients work, you can set to 2
+ieee80211w=0
+ 
+# Disable buggy/weak WPS protocol entirely
+wps_state=0
+ 
+# Isolate clients (prevents devices on WiFi from attacking each other)
+ap_isolate=1
+ 
+# =========================
+# Logging (debug-friendly)
+# =========================
+# Print logs to stdout so you can see them live in your terminal
+logger_stdout=0
 logger_stdout_level=2
-root@ls1088ardb-pb:~#
+ 
+# (Optional) syslog logging
+logger_syslog=1
+logger_syslog_level=2
