--- a/etc/conf/hostapd.conf
+++ b/etc/conf/hostapd.conf
@@ -42,9 +42,6 @@ auth_algs=1
 # =========================
 # Security Section (WPA2-Enterprise / 802.1X)
 # =========================
-# IMPORTANT:
-# - WPA2-Enterprise uses WPA-EAP (NOT WPA-PSK, NOT SAE)
-# - There is NO wpa_passphrase in Enterprise mode
  
 wpa=2
 wpa_key_mgmt=WPA-EAP
@@ -58,7 +55,7 @@ auth_server_addr=127.0.0.1
 auth_server_port=1812
 auth_server_shared_secret=radiussecret
  
-# Optional: RADIUS Accounting (recommended)
+# RADIUS Accounting 
 acct_server_addr=127.0.0.1
 acct_server_port=1813
 acct_server_shared_secret=radiussecret
@@ -77,7 +74,7 @@ ap_isolate=1
 # =========================
 # Logging (debug-friendly)
 # =========================
-# Print logs to stdout so you can see them live in your terminal
+# Print logs to stdout 
 logger_stdout=0
 logger_stdout_level=2
  
